--- a/CrochetCatPause/CrochetCatPause/CrochetCatPause.csproj
+++ b/CrochetCatPause/CrochetCatPause/CrochetCatPause.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\CatEntities.cs" />
+    <Compile Include="Models\ContactMessage.cs" />
     <Compile Include="Models\UpcomingShow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
@@ -260,6 +261,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Content\text\about.cshtml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -325,6 +327,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Store.cshtml" />
     <Content Include="Views\Home\Listen.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Thanks.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
